# TFT-EarlyGameViewer

./: .gitignore  DESIGN.json  DESIGN.md  Launch TFT Early Game Viewer.cmd  Launch opnr.gg.cmd  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.husky/: commit-msg  prepare-commit-msg
electron/: main.cjs  preload.cjs
public/data/: tft-set17.json
scripts/: data-sync.ts  data-validate.ts  electron-dev.mjs  generate-icon.mjs  jsdom.d.ts  launch-dev.mjs  package-tauri-release.mjs  pipeline.ts  scrape-mobalytics.ts
shared/: normalization.ts  phaseAvailability.ts  tft.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AptosBackdropCanvas.tsx  CompListPane.tsx  DetailPane.tsx  DotMatrixTestPage.tsx  PanelLayoutDebug.tsx  RankBadge.tsx  SearchPane.tsx  SimilarityView.tsx  TitleBar.tsx
src/data/: tft-set17.json
src/hooks/: useDraggablePanels.ts  useReactiveGridPhysics.ts  useThemeMode.ts
src/lib/: compMeta.ts  detailPanelContent.ts  filters.ts  (+5 more)
tests/: App.test.tsx  build-browser-css.test.ts  build-browser-ui.test.tsx  detail-panel-content.test.ts  draggable-panels.test.ts  electron-build.test.ts  electron-startup.test.ts  husky.test.ts  inspector-layout.test.ts  launch-script.test.ts  levelling-guide.test.tsx  normalization.test.ts  panel-layout-css.test.ts  panel-registry.test.ts  pipeline.test.ts  similarity-options.test.ts  similarity.test.ts  tauri-build.test.ts  tauri-startup.test.ts  titlebar-shell.test.tsx
(+9 files in other folders)
