[package]
name = "opnr-gg"
version = "0.4.0"
description = "opnr.gg desktop TFT early-game viewer"
authors = ["opnr.gg"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-opener = "2.5.4"
